[gd_scene load_steps=57 format=2]

[ext_resource path="res://entities/enemies/ciliara.gd" type="Script" id=1]
[ext_resource path="res://assets/gfx/characters/ciliara/ciliara.png" type="Texture" id=2]
[ext_resource path="res://assets/gfx/shadow.png" type="Texture" id=3]
[ext_resource path="res://states/state_machine.gd" type="Script" id=4]
[ext_resource path="res://entities/enemies/float_state.gd" type="Script" id=5]
[ext_resource path="res://assets/shaders/whiteout.gdshader" type="Shader" id=6]
[ext_resource path="res://entities/enemies/seek_state.gd" type="Script" id=7]
[ext_resource path="res://entities/enemies/attack_state.gd" type="Script" id=8]
[ext_resource path="res://entities/enemies/charge_state.gd" type="Script" id=9]
[ext_resource path="res://entities/enemies/fire_projectile_state.gd" type="Script" id=10]
[ext_resource path="res://assets/sfx/CILIARA_FIGHT_INTRO.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sfx/CILIARA_PLAYER_DEATH.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sfx/CILIARA_ENEMY_DEATH.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sfx/MJ5 SFX - Lady Hurt 1.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sfx/MJ5 SFX - Lady Hurt 2.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sfx/MJ5 SFX - Lady Hurt 3.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sfx/MJ5 SFX - Lady Hurt 6.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/sfx/MJ5 SFX - Lady Atk 1.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/sfx/MJ5 SFX - Thud or Roll.wav" type="AudioStream" id=19]

[sub_resource type="ShaderMaterial" id=36]
shader = ExtResource( 6 )
shader_param/color = Color( 1, 0, 0, 1 )
shader_param/amount = 0.0

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 32.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}

[sub_resource type="Animation" id=7]
resource_name = "attack_down"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "attack_left"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "attack_right"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "attack_up"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
resource_name = "charge_down"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "charge_left"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "charge_right"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "charge_up"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=37]
resource_name = "death"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 5, 2 ), Vector2( -5, 0 ), Vector2( 5, -2 ), Vector2( -5, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "float_down"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "float_left"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "float_right"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "float_up"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "attack_left"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "attack_up"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "attack_right"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "attack_down"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
blend_point_0/node = SubResource( 18 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 19 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 20 )
blend_point_2/pos = Vector2( 1.1, 0 )
blend_point_3/node = SubResource( 21 )
blend_point_3/pos = Vector2( 0, 1 )
min_space = Vector2( -1.1, -1.1 )
max_space = Vector2( 1.1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "charge_left"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "charge_up"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "charge_right"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "charge_down"

[sub_resource type="AnimationNodeBlendSpace2D" id=27]
blend_point_0/node = SubResource( 23 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 24 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 25 )
blend_point_2/pos = Vector2( 1.1, 0 )
blend_point_3/node = SubResource( 26 )
blend_point_3/pos = Vector2( 0, 1 )
min_space = Vector2( -1.1, -1.1 )
max_space = Vector2( 1.1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "float_left"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "float_up"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "float_right"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "float_down"

[sub_resource type="AnimationNodeBlendSpace2D" id=17]
blend_point_0/node = SubResource( 28 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 29 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 30 )
blend_point_2/pos = Vector2( 1.1, 0 )
blend_point_3/node = SubResource( 31 )
blend_point_3/pos = Vector2( 0, 1 )
min_space = Vector2( -1.1, -1.1 )
max_space = Vector2( 1.1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachine" id=15]
states/attack/node = SubResource( 22 )
states/attack/position = Vector2( 629, 8 )
states/charge/node = SubResource( 27 )
states/charge/position = Vector2( 555, 201 )
states/float/node = SubResource( 17 )
states/float/position = Vector2( 416, 71 )
transitions = [ "float", "attack", SubResource( 32 ), "attack", "float", SubResource( 33 ), "float", "charge", SubResource( 34 ), "charge", "float", SubResource( 35 ) ]
start_node = "float"
graph_offset = Vector2( 51, -17 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=16]

[node name="Ciliara" type="RigidBody2D"]
collision_layer = 2
collision_mask = 4
mode = 2
mass = 10.0
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )
attack_damage = 15.0
move_speed = 100.0
max_hp = 600.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
active = false
default_state_path = NodePath("FloatState")
target_path = NodePath("..")

[node name="FloatState" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
seek_range = 150.0
fire_chance = 0.2
ability_cooldown = 2.0

[node name="SeekState" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
attack_range = 60.0
seek_speed = 225.0
sight_radius = 175.0
idle_state = "float"
can_fire = true
fire_range_min = 175.0
fire_delay = 0.0

[node name="AttackState" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="ChargeState" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="FireProjectileState" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 36 )
position = Vector2( 0, -7.41679 )
texture = ExtResource( 2 )
hframes = 15
frame = 10

[node name="ShearSpawns" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Spawn1" type="Node2D" parent="ShearSpawns"]
position = Vector2( -48, -16 )

[node name="Spawn2" type="Node2D" parent="ShearSpawns"]
position = Vector2( -32, 8 )

[node name="Spawn3" type="Node2D" parent="ShearSpawns"]
position = Vector2( 32, 8 )

[node name="Spawn4" type="Node2D" parent="ShearSpawns"]
position = Vector2( 48, -16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/attack_down = SubResource( 7 )
anims/attack_left = SubResource( 8 )
anims/attack_right = SubResource( 9 )
anims/attack_up = SubResource( 10 )
anims/charge_down = SubResource( 11 )
anims/charge_left = SubResource( 12 )
anims/charge_right = SubResource( 13 )
anims/charge_up = SubResource( 14 )
anims/death = SubResource( 37 )
anims/float_down = SubResource( 3 )
anims/float_left = SubResource( 6 )
anims/float_right = SubResource( 4 )
anims/float_up = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 15 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 16 )
parameters/attack/blend_position = Vector2( 0.0457504, 0.400662 )
parameters/charge/blend_position = Vector2( 0.0855335, 0.976568 )
parameters/float/blend_position = Vector2( 0.228752, 0.463158 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 0, 56 )
scale = Vector2( 0.807692, 0.807692 )
z_index = -1
texture = ExtResource( 3 )

[node name="AttackRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 68, 0 )
collision_mask = 128
collide_with_areas = true
collide_with_bodies = false

[node name="AttackDelayTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="FireDelayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="INTRO" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Ciliara"

[node name="DEATH" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "Ciliara"

[node name="PLAYER_DEATH" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "Ciliara"

[node name="Tween" type="Tween" parent="."]

[node name="AttackFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
bus = "Ciliara"

[node name="ThudFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
bus = "Sound"

[node name="HurtFX" type="Node2D" parent="."]

[node name="Hurt" type="AudioStreamPlayer" parent="HurtFX"]
stream = ExtResource( 14 )
bus = "Ciliara"

[node name="Hurt2" type="AudioStreamPlayer" parent="HurtFX"]
stream = ExtResource( 15 )
bus = "Ciliara"

[node name="Hurt3" type="AudioStreamPlayer" parent="HurtFX"]
stream = ExtResource( 16 )
bus = "Ciliara"

[node name="Hurt4" type="AudioStreamPlayer" parent="HurtFX"]
stream = ExtResource( 17 )
bus = "Ciliara"

[connection signal="body_entered" from="." to="." method="_on_Ciliara_body_entered"]
